frontend/src/App.css
@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");

:root{
  --green: #455d58;
  --white: #F0F8FF;
  --red: #800020;
  --black: #010b13;
  --gold: #FFD700;
  --background: #faf2f7;
}

html,
body {
  height: 100%;
  margin: 0;
  overflow-x: hidden;
}
body {
  font-family: "Josefin Sans", sans-serif;
  background-color: var(--background);
}

